<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access unsuccessful.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending Tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading\u2026</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="label_nsdp">SIM network subset unlock PIN</string>
    <string name="label_cdp">SIM corporate unlock PIN</string>
    <string name="label_spdp">SIM service provider unlock PIN</string>
    <string name="label_sdp">SIM SIM unlock PIN</string>
    <string name="label_rn1dp">RUIM network1 unlock PIN</string>
    <string name="label_rn2dp">RUIM network2 unlock PIN</string>
    <string name="label_rhrpd">RUIM hrpd unlock PIN</string>
    <string name="label_rcdp">RUIM corporate unlock PIN</string>
    <string name="label_rspdp">RUIM service provider unlock PIN</string>
    <string name="label_rdp">RUIM RUIM unlock PIN</string>
    <string name="label_puk">Enter PUK</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_nw_unlock">Requesting SIM network unlock\u2026</string>
    <string name="requesting_nw_subset_unlock">Requesting SIM network subset unlock\u2026</string>
    <string name="requesting_sp_unlock">Requesting SIM service provider unlock\u2026</string>
    <string name="requesting_corporate_unlock">Requesting SIM corporate unlock\u2026</string>
    <string name="requesting_sim_unlock">Requesting SIM SIM unlock\u2026</string>
    <string name="requesting_rnw1_unlock">Requesting RUIM network1 unlock\u2026</string>
    <string name="requesting_rnw2_unlock">Requesting RUIM network2 unlock\u2026</string>
    <string name="requesting_rhrpd_unlock">Requesting RUIM hrpd unlock\u2026</string>
    <string name="requesting_rsp_unlock">Requesting RUIM service provider unlock\u2026</string>
    <string name="requesting_rc_unlock">Requesting RUIM corporate unlock\u2026</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="sum_cfb_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="throttle_data_usage">Data usage</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="voice_privacy">Voice Privacy</string>
    <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="sip_edit_title">SIP account details</string>
    <string name="domain_address_title">Server</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="display_name_title">Display name</string>
    <string name="proxy_address_title">Outbound proxy address</string>
    <string name="port_title">Port number</string>
    <string name="transport_title">Transport type</string>
    <string name="send_keepalive_title">Send keep-alive</string>
    <string name="send_keepalive_summary">Send SIP keep-alive messages</string>
    <string name="auto_registration_title">Auto-registration</string>
    <string name="auto_registration_summary">Register the profile automatically</string>
    <string translatable="false" name="domain_address">SipDomain</string>
    <string translatable="false" name="username">UserName</string>
    <string translatable="false" name="password">Password</string>
    <string translatable="false" name="display_name">DisplayName</string>
    <string translatable="false" name="proxy_address">ProxyAddress</string>
    <string translatable="false" name="port">Port</string>
    <string translatable="false" name="transport">Protocol</string>
    <string translatable="false" name="send_keepalive">SendKeepAlive</string>
    <string translatable="false" name="auto_registration">AutoRegistration</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_summary"></string>
    <string name="voicemail_notification_vibrate_when_title" msgid="8731372580674292759">Vibrate</string>
    <string name="voicemail_notification_vibarte_when_dialog_title" msgid="8995274609647451109">Vibrate</string>
    <string name="voicemail_notification_vibrate_when_default" translatable="false">never</string>
</resources>