<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project
     Copyright (c) 2012, Code Aurora Forum. All rights reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
        android:title="@string/mobile_networks">

    <!-- target class is com.android.phone.MultiSimSetting for Multi Sim Functionality-->
    <PreferenceScreen
        android:key="button_settings_manage_sub"
        android:title="@string/network_settings_sel_sub"
        android:summary="@string/summary_manage_subscriptions"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.SelectSubscription" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="cdma_lte_data_service_key"
        android:title="@string/cdma_lte_data_service">
    </PreferenceScreen>

    <CheckBoxPreference
        android:key="button_data_enabled_key"
        android:title="@string/data_enabled"
        android:persistent="false"
        android:summary="@string/data_enable_summary"/>

    <CheckBoxPreference
        android:key="button_roaming_key"
        android:title="@string/roaming"
        android:persistent="false"
        android:summaryOn="@string/roaming_enable"
        android:summaryOff="@string/roaming_disable"/>

    <PreferenceScreen
        android:key="button_data_usage_key"
        android:title="@string/throttle_data_usage"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.DataUsage" />
    </PreferenceScreen>

</PreferenceScreen>
