<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">

    <PreferenceCategory
        android:title="@string/call_settings"/>

    <!-- Note for all com.android.phone.EditPhoneNumberPreference objects

         The last several attributes are for use with the EditText field
         in the dialog.  These attributes are forwarded to that field
         when the edittext is created.  The attributes include:
           1. android:singleLine
           2. android:autoText
           3. android:background -->

    <!-- Rearranged to allow for lazy queries. -->

    <com.android.phone.EditPhoneNumberPreference
        android:key="button_voicemail_key"
        android:title="@string/voicemail"
        android:summary="@string/sum_voicemail"
        android:persistent="false"
        android:dialogTitle="@string/voicemail"
        phone:confirmMode="confirm"
        android:singleLine="true"
        android:autoText="false"/>

    <CheckBoxPreference
        android:key="button_voice_privacy_key"
        android:title="@string/voice_privacy"
        android:persistent="false"
        android:summary="@string/voice_privacy_summary"/>

 <!-- <CheckBoxPreference
            android:key="button_tty_mode_key"
            android:title="@string/tty_mode_title"
            android:persistent="true"
            android:summary="@string/tty_mode_summary"/>
-->
    <!-- CDMA TTY Options -->
    <ListPreference
        android:key="button_tty_mode_key"
        android:title="@string/tty_mode_option_title"
        android:summary="@string/tty_mode_option_summary"
        android:persistent="false"
        android:entries="@array/tty_mode_entries"
        android:entryValues="@array/tty_mode_values" />
    <!-- CDMA DTMF Options -->
    <ListPreference
        android:key="dtmf_settings"
        android:title="@string/dtmf_tones_title"
        android:summary="@string/dtmf_tones_summary"
        android:entries="@array/dtmf_tone_entries"
        android:entryValues="@array/dtmf_tone_values" />


</PreferenceScreen>
